@@ -94,9 +94,7 @@ public abstract class AbstractRaftActorBehaviorTest<T extends RaftActorBehavior>
      */
     @Test
     public void testHandleAppendEntriesSenderTermLessThanReceiverTerm() {
-        MockRaftActorContext context = createActorContext();
-        short payloadVersion = 5;
-        context.setPayloadVersion(payloadVersion);
+        MockRaftActorContext context = new MockRaftActorContext(5);
 
         // First set the receivers term to a high number (1000)
         context.setTermInfo(new TermInfo(1000, "test"));
@@ -117,7 +115,7 @@ public abstract class AbstractRaftActorBehaviorTest<T extends RaftActorBehavior>
         AppendEntriesReply reply = MessageCollectorActor.expectFirstMatching(behaviorActor, AppendEntriesReply.class);
 
         assertFalse("isSuccess", reply.isSuccess());
-        assertEquals("getPayloadVersion", payloadVersion, reply.getPayloadVersion());
+        assertEquals("getPayloadVersion", 5, reply.getPayloadVersion());
     }
 
 
@@ -312,15 +310,23 @@ public abstract class AbstractRaftActorBehaviorTest<T extends RaftActorBehavior>
     }
 
     protected MockRaftActorContext createActorContext() {
-        return new MockRaftActorContext();
+        return createActorContext(0);
+    }
+
+    protected MockRaftActorContext createActorContext(final int payloadVersion) {
+        return new MockRaftActorContext(payloadVersion);
     }
 
     protected MockRaftActorContext createActorContext(final ActorRef actor) {
-        return new MockRaftActorContext("test", getSystem(), actor);
+        return new MockRaftActorContext("test", getSystem(), actor, 0);
+    }
+
+    protected MockRaftActorContext createActorContext(final ActorRef actor, final int payloadVersion) {
+        return new MockRaftActorContext("test", getSystem(), actor, payloadVersion);
     }
 
     protected AppendEntries createAppendEntriesWithNewerTerm() {
-        return new AppendEntries(100, "leader-1", 0, 0, Collections.emptyList(), 1, -1, (short)0);
+        return new AppendEntries(100, "leader-1", 0, 0, List.of(), 1, -1, (short)0);
     }
 
     protected AppendEntriesReply createAppendEntriesReplyWithNewerTerm() {
